--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -1,1 +1,40 @@
-<h1>Welcome to home Page</h1>
+<section class=" hero py-16">
+    <div class="container mx-auto flex items-center justify-between">
+        <div class="w-1/2">
+            <h6 class="text-lg">Are you hungry?</h6>
+            <h1 class="text-6xl font-bold">Don't wait !</h1>
+            <button class="px-6 py-2 rounded-full text-white text-bold m-4 col">Order now</button>
+        </div>
+        <div class="w-1/2">
+            <img src="img/images.jpg">
+        </div>
+    </div>
+</section>
+
+<section class="container mx-auto py-8">
+    <h1 class="text-2xl font-bold mb-8">All Pizzas</h1>
+    <div class="grid grid-cols-4 row-gap-12 col-gap-16">
+        <% pizzas.forEach((data)=>{%>
+            <div class="w-60">
+                <img class="h-40 mb-4 mx-auto" src="img/pizza.jpg">
+                <div class="text-center">
+                    <h1 class="mb-4 text-lg">
+                        <%= data.name %>
+                    </h1>
+                    <span class="size py-1 px-4 rounded-full uppercase text-xs">
+                        <%= data.size%>
+                    </span>
+                    <div class="flex items-center justify-around py-6">
+                        <span class="text-lg font-bold mt-4">₹<%=data.price%></span>
+                        <button data-pizz="<%=JSON.stringify(data)%>"
+                            class="add-to-cart py-1 px-6 rounded-full font-bold">
+                            <span>+</span>
+                            <span>Add</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <%})%>
+
+    </div>
+</section>
